# data-dictionary-cui-mapping

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
data_dictionary_cui_mapping/configs/: __init__.py  config.yaml
data_dictionary_cui_mapping/configs/apis/: config_metamap_api.yaml  config_pinecone_api.yaml  config_umls_api.yaml
data_dictionary_cui_mapping/configs/custom/: de.yaml  hydra_base.yaml  pvd.yaml
data_dictionary_cui_mapping/configs/semantic_search/: embeddings.yaml
data_dictionary_cui_mapping/curation/: check_cuis.py  create_dictionary_import_file.py
data_dictionary_cui_mapping/curation/utils/: curation_functions.py  dictionary_functions.py
data_dictionary_cui_mapping/hydra_search/: batch_hydra_query_pipeline.py
data_dictionary_cui_mapping/metamap/: __init__.py  batch_query_pipeline.py
data_dictionary_cui_mapping/metamap/skr_web_api/: __init__.py  casauth.py
data_dictionary_cui_mapping/metamap/utils/: api_connection.py  metamap_query_processing_functions.py
data_dictionary_cui_mapping/semantic_search/: batch_hybrid_query_pipeline.py
data_dictionary_cui_mapping/semantic_search/configure_umls_index/: select_embed_upsert_pipeline.py  step1_select_umls_subset.py  step2_embed_umls_subset.py  step3_upsert_umls_subset.py
data_dictionary_cui_mapping/semantic_search/utils/: builders.py  eval_measures.py  runners.py
data_dictionary_cui_mapping/umls/: batch_query_pipeline.py
data_dictionary_cui_mapping/umls/utils/: api_connection.py  runner.py  umls_query_processing_functions.py
data_dictionary_cui_mapping/utils/: check_missing_cuis.py  create_dictionary_import_file.py  curation_functions.py  helper.py  preprocessing_functions.py  process_data_dictionary.py  text_processing.py  ui_functions.py
ddcuimap/: __init__.py
ddcuimap/configs/: __init__.py  config.yaml
ddcuimap/configs/apis/: config_metamap_api.yaml
ddcuimap/configs/curation/: chain_setup.yaml
ddcuimap/configs/custom/: de.yaml  hydra_base.yaml  pvd.yaml  title_def.yaml
ddcuimap/configs/logging/: logging.yaml
ddcuimap/configs/semantic_search/: brics-de_embeddings.yaml  embeddings.yaml  umls_embeddings.yaml
ddcuimap/curation/: __init__.py  check_cuis.py  create_dictionary_import_file.py
ddcuimap/curation/chains/: __init__.py  curchain.py
ddcuimap/curation/chains/system_prompts/: curator.py
ddcuimap/curation/chains/utils/: format_qa.py  token_functions.py
ddcuimap/curation/utils/: curation_functions.py  dictionary_functions.py  extract_dd_cheatsheet.py  process_data_dictionary.py  text_processing.py  xlsx_formatting.py
ddcuimap/hydra_search/: __init__.py  batch_hydra_query_pipeline.py
ddcuimap/metamap/: __init__.py  batch_query_pipeline.py
ddcuimap/metamap/skr_web_api/: casauth.py
ddcuimap/metamap/utils/: api_connection.py  metamap_query_processing_functions.py
ddcuimap/semantic_search/: __init__.py  batch_hybrid_query_pipeline.py
ddcuimap/semantic_search/configure_umls_index/: select_embed_upsert_pipeline.py  step1_select_umls_subset.py  step2_embed_umls_subset.py  step3_upsert_umls_subset.py
ddcuimap/semantic_search/utils/: api_connection.py  builders.py  checks.py  runners.py
ddcuimap/umls/: __init__.py  batch_query_pipeline.py
ddcuimap/umls/utils/: api_connection.py  runner.py  umls_query_processing_functions.py
ddcuimap/utils/: BatchGenerator.py  __init__.py  decorators.py  helper.py  setup_logging.py  text_processing.py
ddcuimap/utils/logger/: config_logging.py  config_logging.yaml
notebooks/: cui_batch_query_pipeline.ipynb  metamap_api_search.ipynb  umls_api_search.ipynb  workflow
notebooks/example_files/: Data-Dictionary_example_markdown_table.csv  Data-Dictionary_example_markdown_table.xlsx  Main_FA_FITBIR_CDE.csv  MetaMap_Settings_StopWords.csv  MetaMap_Settings_StopWords_2022-10-06.csv
notebooks/example_files/Step-1/: DE_Step-1_curation_keepCol.xlsx
notebooks/example_files/Step-2/: DE_Step-2_dictionary-import-file.csv
