[tool.poetry]
name = "data-dictionary-cui-mapping"
version = "1.1.5"
description = "This package allows you to load in a data dictionary and map cuis to defined fields using either the UMLS API or MetaMap API from NLM, or a Semantic Search pipeline using Pinecone vector database."
authors = ["Kevin Armengol <kevin.armengol@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kevon217/data-dictionary-cui-mapping"
keywords = ["BRICS", "curation", "data dictionary", "UMLS", "MetaMap", "Metathesaurus", "CUI", "concept unique identifier", "NLM", "PubMedBERT", "pritamdeka", "pritamdeka/PubMedBERT-mnli-snli-scinli-scitail-mednli-stsb","semantic search", "Pinecone", "embeddings", "vector database"]
packages = [{include = "ddcuimap/**/*"}]

[tool.poetry.dependencies]
cchardet = "^2.1.7"
hydra-core = ">=1.1.0"
omegaconf = "2.1.2"
openpyxl = ">=3.0.10"
pandas = ">=1.5.2"
pathlib = "^1.0.1"
pinecone-client = "^2.2.1"
python = "^3.8.1"
python-dotenv = "0.21.1"
requests = ">=2.28.1"
requests-html = ">=0.10.0"
sentence-transformers = "^2.2.2"
transformers = "4.18.0"
coloredlogs = "^15.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
bs4 = "^0.0.1"
deptry = "^0.8.0"
flake8 = "^6.0.0"
isort = "^5.11.3"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"
monkeytype = "^23.3.0"
pre-commit = "^3.0.4"
radon = "^5.1.0"
splade = {git = "https://github.com/naver/splade.git"}
vulture = "^2.7"
wheel = "^0.38.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
